--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -7,11 +7,11 @@
 <meta http-equiv="cache-control" content="max-age=604800" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <style>
-		 .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+	.center {
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 50%;
 }
 </style>
 <title>Spritual Sky | One of the Biggest Online Shopping Platform in INDIA</title>
@@ -111,7 +111,8 @@ $(document).ready(function() {
 	</div> <!-- col.// -->
 	<div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
 				<div class="d-flex justify-content-end mb-3 mb-lg-0">
-					{% if user.id is None %}
+					<div class="widget-header">
+						{% if user.id is None %}
 					<div class="widget-header">
 						<small class="title text-muted">Welcome guest!</small>
 						<div> 
@@ -128,6 +129,7 @@ $(document).ready(function() {
 						</div>
 					</div>
 					{% endif %}
+					</div>
 					<a href="/cart" class="widget-header pl-3 ml-3">
 						<div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
 						<span class="badge badge-pill badge-danger notify">{{cart_count}}</span>
@@ -143,75 +145,115 @@ $(document).ready(function() {
 
 </header> <!-- section-header.// -->
 
-
-<!-- ========================= SECTION MAIN ========================= -->
-<section class="section-intro padding-y-sm">
+<!-- ========================= SECTION CONTENT ========================= -->
+<section class="section-conten padding-y bg">
+{% include 'include/alerts.html' %}
 <div class="container">
-	<div class="intro-banner-wrap">
-		<img src="https://boisetemple.org/wp-content/uploads/2019/10/Srila-Prabhupada-Disappearance-day.001-1024x538.jpeg" alt="" class="center img-fluid rounded" style="width: 100%;">
-	</div>
-</div> <!-- container //  -->
-</section>
-<!-- ========================= SECTION MAIN END// ========================= -->
-
-<!-- ========================= SECTION  ========================= -->
-<section class="section-name padding-y-sm">
-<div class="container">
-
-<header class="section-heading">
-	<a href="/store/" class="btn btn-outline-primary float-right">See all</a>
-	<h3 class="section-title">Popular products</h3>
-</header><!-- sect-heading -->
-
-	
-<div class="row">
-	{% for product in products %}<!-- col.// -->
-	<div class="col-md-3">
-		<div class="card card-product-grid">
-			<a href="{{product.get_url}}" class="img-wrap"><br><img src="{{product.image.url}}"><br></a>
-			<br>
-			<br>
-			<figcaption class="info-wrap">
-				<a href="{{product.get_url}}" class="title">{{product.product_name}}</a>
-				<div class="price mt-1">
-					<div class="row mx-auto">
-						<p>&#8377;</p>{{product.price}}
-					</div>
-				</div> <!-- price-wrap.// -->
-			</figcaption>
-		</div>
-	</div> 
-	{% endfor %}
+	<div class="row">
+	<aside class="col-md-3">
+		<!--   SIDEBAR   -->
+		<ul class="list-group">
+			<a class="list-group-item active" href="#"> My order history </a>
+			<a class="list-group-item" href="#"> Transactions </a>
+			<a class="list-group-item" href="#"> Return and refunds </a>
+			<a class="list-group-item" href="#">Settings </a>
+			<a class="list-group-item" href="#"> My Selling Items </a>
+			<a class="list-group-item" href="#"> Received orders </a>
+		</ul>
+		<br>
+		<a class="btn btn-light btn-block" href="{% url 'logout' %}"> <i class="fa fa-power-off"></i> <span class="text">Log out</span> </a> 
+		<!--   SIDEBAR .//END   -->
+	</aside>
+	<main class="col-md-9">
+		<article class="card">
+		<header class="card-header">
+			<strong class="d-inline-block mr-3">Order ID: 6123456789</strong>
+			<span>Order Date: 16 December 2018</span>
+		</header>
+		<div class="card-body">
+			<div class="row"> 
+				<div class="col-md-8">
+					<h6 class="text-muted">Delivery to</h6>
+					<p>Michael Jackson <br>  
+					Phone +1234567890 Email: myname@pixsellz.com <br>
+			    	Location: Home number, Building name, Street 123,  Tashkent, UZB <br> 
+			    	P.O. Box: 100123
+			 		</p>
+				</div>
+				<div class="col-md-4">
+					<h6 class="text-muted">Payment</h6>
+					<span class="text-success">
+						<i class="fab fa-lg fa-cc-visa"></i>
+					    Visa  **** 4216  
+					</span>
+					<p>Subtotal: $356 <br>
+					 Shipping fee:  $56 <br> 
+					 <span class="b">Total:  $456 </span>
+					</p>
+				</div>
+			</div> <!-- row.// -->
+		</div> <!-- card-body .// -->
+		<div class="table-responsive">
+		<table class="table table-hover">
+			<tr>
+				<td width="65">
+					<img src="{% static 'images/items/1.jpg' %}" class="img-xs border">
+				</td>
+				<td> 
+					<p class="title mb-0">Product name goes here </p>
+					<var class="price text-muted">USD 145</var>
+				</td>
+				<td> Seller <br> Nike clothing </td>
+				<td width="250"> <a href="#" class="btn btn-outline-primary">Track order</a> <a href="#" class="btn btn-light"> Details </a> </td>
+			</tr>
+			<tr>
+				<td>
+					<img src="{% static 'images/items/2.jpg' %}" class="img-xs border">
+				</td>
+				<td> 
+					<p class="title mb-0">Another name goes here </p>
+					<var class="price text-muted">USD 15</var>
+				</td>
+				<td> Seller <br> ABC shop </td>
+				<td> <a href="#" class="btn btn-outline-primary">Track order</a> <a href="#" class="btn btn-light"> Details </a> </td>
+			</tr>
+			<tr>
+				<td>
+					<img src="{% static 'images/items/3.jpg' %}" class="img-xs border">
+				</td>
+				<td> 
+					<p class="title mb-0">The name of the product  goes here </p>
+					<var class="price text-muted">USD 145</var>
+				</td>
+				<td> Seller <br> Wallmart </td>
+				<td> <a href="#" class="btn btn-outline-primary">Track order</a> <a href="#" class="btn btn-light"> Details </a> </td>
+			</tr>
+		</table>
+		</div> <!-- table-responsive .end// -->
+		</article> <!-- order-group.// --> 
+	</main>
 </div> <!-- row.// -->
+</div>
 
-</div><!-- container // -->
+
 </section>
-<!-- ========================= SECTION  END// ========================= -->
-
-
+<!-- ========================= SECTION CONTENT END// ========================= -->
 
 
 <!-- ========================= FOOTER ========================= -->
-<footer class="section-footer border-top">
+<footer class="section-footer border-top padding-y">
 	<div class="container">
-		<section class="footer-bottom border-top row">
-			<div class="col-md-2">
-				<p class="text-muted"> &copy 2019 Spirtual Sky </p>
-			</div>
-			<div class="col-md-8 text-md-center">
-				<span  class="px-2">info@spirtualsky.com</span>
-				<span  class="px-2">+91 9502753353</span>
-				<span  class="px-2">F BLOCK 1006 VERTEX PANACHE KOKAPER NARSING HYDERABAD 500075</span>
-			</div>
-			<div class="col-md-2 text-md-right text-muted">
-				<i class="fab fa-lg fa-cc-visa"></i>
-				<i class="fab fa-lg fa-cc-paypal"></i>
-				<i class="fab fa-lg fa-cc-mastercard"></i>
-			</div>
-		</section>
+		<p class="float-md-right"> 
+			&copy Copyright 2019 All rights reserved
+		</p>
+		<p>
+			<a href="#">Terms and conditions</a>
+		</p>
 	</div><!-- //container -->
 </footer>
 <!-- ========================= FOOTER END // ========================= -->
+
+
 
 </body>
 </html>
