--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -112,11 +112,23 @@ $(document).ready(function() {
 	<div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
 				<div class="d-flex justify-content-end mb-3 mb-lg-0">
 					<div class="widget-header">
+						{% if user.id is None %}
+					<div class="widget-header">
 						<small class="title text-muted">Welcome guest!</small>
 						<div> 
-							<a href="./signin.html">Sign in</a> <span class="dark-transp"> | </span>
-							<a href="./register.html"> Register</a>
+							<a href="/accounts/login">Sign in</a> <span class="dark-transp"> | </span>
+							<a href="/accounts/register"> Register</a>
 						</div>
+					</div>
+					{% else %}
+					<div class="widget-header">
+						<small class="title text-muted">Welcome {{user.first_name}}</small>
+						<div> 
+							<a href="/accounts/dashboard">Dashboard</a> <span class="dark-transp"> | </span>
+							<a href="/accounts/logout">Logout</a>
+						</div>
+					</div>
+					{% endif %}
 					</div>
 					<a href="/cart" class="widget-header pl-3 ml-3">
 						<div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
